rust/tests/snapshots/usage/destinations__get.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations get
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <destinationId>

Usage: vendo destinations get <destinationId>

For more information, try '--help'.

$ vendo destinations get --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <destinationId>","code":null,"status":null,"requestId":null}}
